<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.VaccinesFragment"
        android:id="@+id/sView">
        
       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:rowCount="3"
           android:columnCount="2">

           <androidx.cardview.widget.CardView
               android:id="@+id/cardPhizer"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:layout_rowWeight="2"
               android:layout_columnWeight="2"
               android:layout_margin="10dp"
               app:cardCornerRadius="20dp"
               app:cardMaxElevation="12dp"
               app:cardPreventCornerOverlap="true"
               app:cardUseCompatPadding="true">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp">

                   <ImageView
                       android:id="@+id/pfizer"
                       android:layout_width="90dp"
                       android:layout_height="80dp"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/vaccine_img"
                       android:src="@drawable/img"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/pfizer"
                       android:textSize="18sp"
                       app:layout_constraintStart_toStartOf="@+id/pfizer"
                       app:layout_constraintTop_toBottomOf="@id/pfizer"/>

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>


           <androidx.cardview.widget.CardView
               android:id="@+id/cardJnJ"
               android:layout_width="75dp"
               android:layout_height="0dp"
               android:layout_rowWeight="2"
               android:layout_columnWeight="2"
               android:layout_margin="10dp"
               android:elevation="10dp"
               app:cardCornerRadius="20dp"
               app:cardMaxElevation="12dp"
               app:cardPreventCornerOverlap="true"
               app:cardUseCompatPadding="true">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp">

                   <ImageView
                       android:id="@+id/jnjImg"
                       android:layout_width="90dp"
                       android:layout_height="80dp"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/vaccine_img"
                       android:src="@drawable/img"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/jnj"
                       android:textSize="18sp"
                       app:layout_constraintStart_toStartOf="@+id/jnjImg"
                       app:layout_constraintTop_toBottomOf="@id/jnjImg"/>

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>


           <androidx.cardview.widget.CardView
               android:id="@+id/cardModerna"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:layout_rowWeight="2"
               android:layout_columnWeight="2"
               android:layout_margin="10dp"
               android:elevation="10dp"
               app:cardCornerRadius="20dp"
               app:cardMaxElevation="12dp"
               app:cardPreventCornerOverlap="true"
               app:cardUseCompatPadding="true">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp">

                   <ImageView
                       android:id="@+id/modernaImg"
                       android:layout_width="90dp"
                       android:layout_height="80dp"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/vaccine_img"
                       android:src="@drawable/img"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/moderna"
                       android:textSize="18sp"
                       app:layout_constraintStart_toStartOf="@+id/modernaImg"
                       app:layout_constraintTop_toBottomOf="@id/modernaImg"/>

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>


           <androidx.cardview.widget.CardView
               android:id="@+id/cardZenica"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:layout_rowWeight="2"
               android:layout_columnWeight="2"
               android:layout_margin="10dp"
               android:elevation="10dp"
               app:cardCornerRadius="20dp"
               app:cardMaxElevation="12dp"
               app:cardPreventCornerOverlap="true"
               app:cardUseCompatPadding="true">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp">

                   <ImageView
                       android:id="@+id/zenicaImg"
                       android:layout_width="90dp"
                       android:layout_height="80dp"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/vaccine_img"
                       android:src="@drawable/img"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/astra"
                       android:textSize="18sp"
                       app:layout_constraintStart_toStartOf="@+id/zenicaImg"
                       app:layout_constraintTop_toBottomOf="@id/zenicaImg"/>

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>


           <androidx.cardview.widget.CardView
               android:id="@+id/cardSino"
               android:layout_width="75dp"
               android:layout_height="wrap_content"
               android:layout_rowWeight="2"
               android:layout_columnWeight="2"
               android:layout_margin="10dp"
               android:elevation="10dp"
               app:cardCornerRadius="20dp"
               app:cardMaxElevation="12dp"
               app:cardPreventCornerOverlap="true"
               app:cardUseCompatPadding="true">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp">

                   <ImageView
                       android:id="@+id/sinoImg"
                       android:layout_width="90dp"
                       android:layout_height="80dp"
                       android:layout_marginStart="10dp"
                       android:contentDescription="@string/vaccine_img"
                       android:src="@drawable/img"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/sino"
                       android:textSize="18sp"
                       app:layout_constraintStart_toStartOf="@+id/sinoImg"
                       app:layout_constraintTop_toBottomOf="@id/sinoImg"/>

               </androidx.constraintlayout.widget.ConstraintLayout>
           </androidx.cardview.widget.CardView>



       </GridLayout>
    </ScrollView>
